--- a/src/component/Main/Main.css
+++ b/src/component/Main/Main.css
@@ -4,7 +4,7 @@
   scroll-behavior: smooth;
   overflow-y: auto;
   scrollbar-width: none;
-  background-image: url(../../../public/subtle-prism.svg);
+  background-image: url(../../../public/protruding-squares.svg);
   &::-webkit-scrollbar {
     display: none;
   }
